# PerceptionComponents

./: README.md
ColorSegmentation/: .cproject  .project  README.md  representations.aird
ColorSegmentation/model/: ColorSegmentation.component  ColorSegmentation.componentDocumentation  ColorSegmentation.componentParameters
ColorSegmentation/smartsoft/: CMakeLists.txt  ColorSegmentation.ini
ComponentFaceDetection/: .cproject  .project  README.md  representations.aird
ComponentFaceDetection/smartsoft/: CMakeLists.txt
ComponentFaceRecognition/: .classpath  .cproject  .project  README.md  representations.aird
ComponentFaceRecognition/model/: ComponentFaceRecognition.component
ComponentFaceRecognition/smartsoft/: CMakeLists.txt
FaceDetection/: .classpath  .cproject  .project  representations.aird
FaceDetection/model/: FaceDetection.component
FaceDetection/smartsoft/: CMakeLists.txt  FaceDetection.ini
FaceRecognition/: .classpath  .cproject  .project  representations.aird
FaceRecognition/smartsoft/: CMakeLists.txt
InstanceRecognition/: .classpath  .cproject  .project  README.md  representations.aird
ObjectDetection/: .cproject  .project  README.md  representations.aird
ObjectLocation/: .classpath  .cproject  .project  representations.aird
ROSBridge/: .classpath  .cproject  representations.aird
RealSenseBasic/: .cproject  .gitignore  .project  README.md  representations.aird
ShapeRecognition/: .classpath  .cproject  .project  README.md  representations.aird
ShapeRecognition/smartsoft/lib/object_pose_estimation/: CMakeLists.txt  package.xml
(+284 files in other folders)
