<?xml version="1.0"?>
<package>
  <name>object_pose_estimation</name>
  <version>0.0.1</version>
  <description>
    object_pose_estimation
  </description>
  <maintainer email="rorro.mr@gmail.com">Rodrigo Munoz</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libpcl-all</build_depend>  
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>

</package>